src/OpenGl/OpenGl_Workspace.cxx
@@ -128,24 +128,14 @@ Standard_Boolean OpenGl_Workspace::Activate()
   if (!OpenGl_Window::Activate())
     return Standard_False;
 
-  NamedStatus             = IsTextureEnabled() ? OPENGL_NS_TEXTURE : 0;
   DegenerateModel         = 0;
   SkipRatio               = 0.0f;
-  HighlightColor          = &myDefaultHighlightColor;
-  AspectLine_set          = &myDefaultAspectLine;
-  AspectLine_applied      = NULL;
-  AspectFace_set          = &myDefaultAspectFace;
-  AspectFace_applied      = NULL;
-  AspectMarker_set        = &myDefaultAspectMarker;
-  AspectMarker_applied    = NULL;
-  AspectText_set          = &myDefaultAspectText;
-  AspectText_applied      = NULL;
-  TextParam_set           = &myDefaultTextParam;
-  TextParam_applied       = NULL;
   ViewMatrix_applied      = &myDefaultMatrix;
   StructureMatrix_applied = &myDefaultMatrix;
-  PolygonOffset_applied   = NULL;
-	return Standard_True;
+
+  ResetAppliedAspect();
+
+  return Standard_True;
 }
 
 // =======================================================================
@@ -159,4 +149,30 @@ void OpenGl_Workspace::UseTransparency (const Standard_Boolean theFlag)
     myUseTransparency = theFlag;
     EraseAnimation();
   }
+}
+
+//=======================================================================
+//function : ResetAppliedAspect
+//purpose  : Sets default values of GL parameters in accordance with default aspects
+//=======================================================================
+void OpenGl_Workspace::ResetAppliedAspect()
+{
+  NamedStatus           = IsTextureEnabled() ? OPENGL_NS_TEXTURE : 0;
+  HighlightColor        = &myDefaultHighlightColor;
+  AspectLine_set        = &myDefaultAspectLine;
+  AspectLine_applied    = NULL;
+  AspectFace_set        = &myDefaultAspectFace;
+  AspectFace_applied    = NULL;
+  AspectMarker_set      = &myDefaultAspectMarker;
+  AspectMarker_applied  = NULL;
+  AspectText_set        = &myDefaultAspectText;
+  AspectText_applied    = NULL;
+  TextParam_set         = &myDefaultTextParam;
+  TextParam_applied     = NULL;
+  PolygonOffset_applied = NULL;
+
+  AspectLine(Standard_True);
+  AspectFace(Standard_True);
+  AspectMarker(Standard_True);
+  AspectText(Standard_True);
 }
